--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,17 @@ repositories {
 }
 
 dependencies {
+    // embedded tomcat
+    implementation 'org.apache.tomcat.embed:tomcat-embed-core:8.5.42'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:8.5.42'
+
+    // logback-classic
+    implementation 'ch.qos.logback:logback-classic:1.2.3'
+
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    testImplementation 'org.assertj:assertj-core:3.23.1'
 }
 
 test {
