--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ dependencies {
     // logback-classic
     implementation 'ch.qos.logback:logback-classic:1.2.3'
 
+    // servlet
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
+
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
