--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,14 @@ repositories {
 }
 
 dependencies {
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
+
+    implementation 'org.reflections:reflections:0.9.12'
+
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    testImplementation('org.assertj:assertj-core:3.22.0')
 }
 
 test {
