--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ dependencies {
     // JSTL
     implementation 'javax.servlet:jstl:1.2'
 
+    // Reflections
+    implementation 'org.reflections:reflections:0.9.12'
+
     // Logback
     implementation 'ch.qos.logback:logback-classic:1.2.3'
 
