--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,12 @@ repositories {
 }
 
 dependencies {
+    // Reflection
+    implementation 'org.reflections:reflections:0.10.2'
+
+    // AssertJ
+    testImplementation('org.assertj:assertj-core:3.22.0')
+
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
